<resources>
    <string name="app_name">Dinote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_account">Tài khoản</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_theme">Chủ đề</string>
    <string name="text_like">Yêu thích</string>
    <string name="text_lock">Khóa ứng dụng</string>
    <string name="text_remind">Nhắc Nhở</string>
    <string name="text_rate">Thích ứng dụng</string>
    <string name="text_tag">Thẻ gần đây</string>
    <string name="open">Open Navigaton Drawable</string>
    <string name="close">Close Navigation Drawable</string>
    <string name="txtSave">Lưu</string>
    <string name="item_motion">item_motion</string>
    <string name="funny">Vui vẻ</string>
    <string name="happy">Hạnh phúc</string>
    <string name="Cute">Đáng yêu</string>
    <string name="cool">Ngầu</string>
    <string name="wow">Kinh ngạc</string>
    <string name="diseases">Bệnh tật</string>
    <string name="noninteresting">Nhạt</string>
    <string name="hate">Tức Giận</string>
    <string name="add_tag">Bấm thêm thẻ</string>
    <string name="continues_dinote_title">Tiếp tục Nhật ký của bạn</string>
    <string name="question_and_answer">Bạn có muốn tiếp tục viết nhật ký ?</string>
    <string name="update">Cập Nhật</string>
    <string name="save">Lưu</string>
    <string name="favorite">Yêu Thích</string>
    <string name="add_favorite">Đã thêm vào mục yêu thích</string>
    <string name="time_remind_default">Thời gian nhắc nhở mặc định</string>
    <string name="delete">Xóa</string>
    <string name="txt_search">Nhập thẻ, nội dung để tìm kiếm</string>
    <string name="txt_history_search">Lịch sử tìm kiểm</string>
    <string name="tag_hot">Nhãn nổi bật</string>
    <string name="delete_history">Xóa lịch sử</string>
    <string name="hint_search">Nhập gì đó để tìm kiếm</string>
    <string name="showmore">Thêm</string>
    <string name="hint_search_result">Search Result</string>
    <string name="dinote_chanel">Dinote Chanel</string>
    <string name="remind_dinote">Chanel remind write dinote</string>
    <string name="dinote_id">dinoteId</string>
    <string name="write_debied">Write permission denied</string>
    <string name="read_denied">Read permission denied</string>
    <string name="item_end_dinote">Đã đến ghi chú cuối cùng</string>
    <string name="notifi_title">Dinote luôn bên cạnh bạn</string>
    <string name="notifi_id">dinoteId</string>
    <string name="notifi_cation_content">Bạn đã sử dụng ghi chú hôm nay chưa</string>
    <string name="choose_color">Choose</string>
    <string name="cancel_color">Cancel</string>
    <string name="time_remid">Thời gian nhắc nhở:  %1$s</string>
    <string name="hit_remind_default">Thời gian nhắc nhở 5:45 AM</string>
    <string name="add_remind">Điều chỉnh thời gian nhắc nhở</string>
    <string name="add_time_remind">Thêm lời nhắc thời gian</string>
    <string name="dinote_lite">Dinote Lite</string>
    <string name="des_image">Mô tả ảnh</string>
    <string name="wirte_on_my_life">Nhập nội dung</string>
    <string name="hint_dinote_item_title">Tiêu đề no way hôm</string>
    <string name="hint_dinote_item_content">Không có nội dung</string>
    <string name="txt_month">Th %1$i</string>
    <string name="time_reminded">Thời gian đã tồn tại</string>
    <string name="save_success">Nhật Ký của bạn đã lưu thành công</string>
    <string name="good_jod">Chúc Mừng</string>
    <string name="yes">Đồng ý</string>
    <string name="txt_success">Thành Công</string>
    <string name="time_remind">Thời gian nhắc nhở:</string>
    <string name="choose_time_remind">Choose Time</string>
    <string name="no_dinote">Không có nhật ký</string>
    <string name="autumn">Thu gọn</string>
    <string name="show_more">Thêm</string>
    <string name="text_commit_exit_app">Xác nhận thoát...!</string>
    <string name="text_exit_app">Bạn có muốn thoát ứng dụng không ?</string>
    <string name="dinote_channel">dinoteId</string>
    <string name="des_notifi">des notification</string>
    <string name="text_change">Thay đổi</string>
    <string name="text_exit">Thoát</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="give">Giữ lại</string>
    <string name="txt_delete">Xóa</string>
    <string name="Question_Delete">Bạn có chắc chắn xóa nhật ký này</string>
    <string name="question_delete_title">Bạn muốn xóa ký ức này</string>
    <string name="txt_continue_create_dinote">Tiếp tục viết nhật ky</string>
    <string name="question_create_continue">Bạn có muốn tiếp tục viết nhạt ký không</string>
    <string name="change_theme">Thay đôi chủ đề</string>
</resources>