<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.SearchFragment">

        <LinearLayout
            android:id="@+id/lnl_search_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imv_search_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_cancel" />

            <EditText
                android:id="@+id/edit_search_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/txt_search" />

            <ImageView
                android:id="@+id/imv_search_show"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_search" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/lnl_search_action">

            <TextView
                android:id="@+id/tv_search_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_history_search"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/delete_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_search_history"
                android:layout_marginTop="@dimen/margin_16dp" />

            <TextView
                android:id="@+id/tv_search_tag_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rcv_search_history"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/tag_hot" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_search_tag_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_search_tag_hot"
                android:layout_marginTop="@dimen/margin_16dp" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>