<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ava_acc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/text_account"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header_login"
        app:cardBackgroundColor="#806EFF"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_header_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:text="@string/text_login"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="68dp" />
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/view_heard"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_header_login"
        android:background="@color/black"
      />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@+id/view_heard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_theme"/>
            <TextView
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_theme"/>

        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_heart"/>
            <TextView
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_theme"/>

        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_rate"/>
            <TextView
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_theme"/>

        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_tag"/>
            <TextView
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_theme"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_heard_tag_hot"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>